--- a/src/test/resources/docker-compose.yml
+++ b/src/test/resources/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - "2181:2181"
   kafka:
-    image: wurstmeister/kafka
+    image: wurstmeister/kafka:2.13-2.6.0
     command: [start-kafka.sh]
     ports:
       - "9092:9092"
@@ -27,8 +27,6 @@ services:
       - "SPARK_KAFKA_VERSION=0.10"
     depends_on:
       - kafka
-    volumes:
-      - ./app-streaming/src/test/resources/schemaDir2:/data/avro-schema
   spark-worker-1:
     image: bde2020/spark-worker:2.4.0-hadoop2.7
     container_name: spark-worker-1
@@ -39,5 +37,3 @@ services:
     environment:
       - "SPARK_MASTER=spark://spark-master:7077"
       - "SPARK_KAFKA_VERSION=0.10"
-    volumes:
-      - ./app-streaming/src/test/resources/schemaDir2:/data/avro-schema
